Changed the console layout to show all stable prices so you can choose the best one to trade - Added an individual  bot for each other stable coins: PAX/USDT, USDC/USDT, USDS/USDT

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "binance-stablecoin-bot",
 	"version": "1.0.0",
-	"description": "make infinity money with tusd and usdt",
+	"description": "make money from stablecoins",
 	"main": "bot.js",
 	"scripts": {
 		"start": "node bot.js"
